--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
       "less": ">= 1.3.1",
       "grunt": "~0.4.1",
       "grunt-contrib-jshint": "~0.1.1",
-      "grunt-contrib-nodeunit": "~0.1.2"
+      "grunt-contrib-nodeunit": "~0.1.2",
+      "grunt-contrib-uglify": "~0.2.0",
+      "grunt-contrib-copy": "~0.4.1",
+      "grunt-recess": "~0.3.3"
    }
 }
