--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
       "recess": ">= 1.1.6",
       "less": ">= 1.3.1",
       "grunt": "~0.4.1",
-      "grunt-contrib-jshint": "~0.1.1",
-      "grunt-contrib-nodeunit": "~0.1.2",
-      "grunt-contrib-uglify": "~0.2.0",
+      "grunt-contrib-concat": "~0.1.3",
       "grunt-contrib-copy": "~0.4.1",
+      "grunt-contrib-uglify": "~0.2.0",
+      "grunt-contrib-watch": "~0.3.1",
+      "grunt-contrib-jshint": "~0.4.0",
       "grunt-recess": "~0.3.3"
    }
 }
