--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       }
    ]
    ,"devDependencies": {
-      "express": ">= 3.x",
+      "express": "= 3.x",
       "hogan.js": ">= 2.0.0",
       "recess": ">= 1.1.6",
       "less": ">= 1.3.1",
