--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-    "name":           "bootmetro"
-   ,"version":        "1.0.0"
-   ,"description":    "simple and flexible web framework to create elegant and modern web applications with the same look & feel of Windows 8 "
-   , "keywords":      ["bootmetro", "css"]
-   , "homepage":      "http://aozora.github.com/bootmetro/"
-   , "author":        "Marcello Palmitessa"
-   , "repository": {
-       "type": "git"
-      ,"url": "https://github.com/aozora/bootmetro"
-   }
-   , "licenses": [
-      {
-         "type": "Apache-2.0"
-         , "url": "http://www.apache.org/licenses/LICENSE-2.0"
-      }
-      ,{
-         "type": "GPL-2.0"
-         ,"url": "http://www.gnu.org/licenses/gpl-2.0.html"
-      }
-   ]
-   ,"devDependencies": {
-      "express": ">= 3.x",
-      "hogan.js": ">= 2.0.0",
-      "recess": ">= 1.1.6",
-      "less": ">= 1.3.1",
-      "grunt": "~0.4.1",
-      "grunt-contrib-clean": "~0.4.1",
-      "grunt-contrib-concat": "~0.1.3",
-      "grunt-contrib-copy": "~0.4.1",
-      "grunt-contrib-uglify": "~0.2.0",
-      "grunt-contrib-jshint": "~0.4.0",
-      "grunt-recess": "~0.3.3"
-   }
+  "name": "bootmetro",
+  "version": "1.0.0",
+  "description": "simple and flexible web framework to create elegant and modern web applications with the same look & feel of Windows 8 ",
+  "keywords": [
+    "bootmetro",
+    "css"
+  ],
+  "homepage": "http://aozora.github.com/bootmetro/",
+  "author": "Marcello Palmitessa",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aozora/bootmetro"
+  },
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    },
+    {
+      "type": "GPL-2.0",
+      "url": "http://www.gnu.org/licenses/gpl-2.0.html"
+    }
+  ],
+  "devDependencies": {
+    "body-parser": "^1.12.2",
+    "compression": "^1.4.3",
+    "errorhandler": "^1.3.5",
+    "express": ">= 3.x",
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-recess": "~0.3.3",
+    "hogan.js": ">= 2.0.0",
+    "less": ">= 1.3.1",
+    "method-override": "^2.3.2",
+    "morgan": "^1.5.2",
+    "recess": ">= 1.1.6"
+  }
 }
